--- a/sgc_client/src/App.css
+++ b/sgc_client/src/App.css
@@ -7,6 +7,37 @@
   pointer-events: none;
 }
 
+.active-spa {
+  color: #ffffff !important;
+  background-color: #612080;
+}
+
+.logo {
+  float: left;
+  height: 120px;
+  margin-left: 10px;
+  position: absolute;
+  text-align: center;
+  transition: width .5s, height .5s;
+  width: 150px;
+  z-index: 2;
+}
+
+.profile-menu{
+    background: #70388b;
+    height: 40px;
+}
+
+.tx-profilemenu{
+  float: right;
+  margin: 0 5px;
+}
+
+.navigation {
+  margin-left: 0px;
+  height: 50px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
