--- a/sgc_client/src/App.css
+++ b/sgc_client/src/App.css
@@ -38,6 +38,10 @@
   height: 60px;
 }
 
+.spa-content{
+  background: 	#d2cfd6;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
