Id column hide from user datatable

--- a/sgc_client/src/index.css
+++ b/sgc_client/src/index.css
@@ -59,6 +59,6 @@ code {
   display: inline-block;
 }
 
-.tableuser .dataTables_wrapper th:nth-child(1) {
+.tableuser .dataTables_wrapper th:nth-child(1), .tableuser .dataTables_wrapper tbody tr td:nth-child(1){
   display: none;
 }
