--- a/sgc_client/src/index.css
+++ b/sgc_client/src/index.css
@@ -69,3 +69,12 @@ code {
   border-radius: 0;
   padding-top: 10px;
 }
+
+.sticky {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  border-top: 0;
+}
