--- a/sgc_client/src/index.css
+++ b/sgc_client/src/index.css
@@ -63,7 +63,7 @@ code {
   display: none;
 }
 
-.userform{
+.card-spa{
   background-color: #fff;
   border: 1px solid rgba(0,0,0,.125);
   border-radius: 0;
