Add components to events manager

--- a/sgc_client/src/index.css
+++ b/sgc_client/src/index.css
@@ -59,7 +59,9 @@ code {
   display: inline-block;
 }
 
-.tableuser .dataTables_wrapper th:nth-child(1), .tableuser .dataTables_wrapper tbody tr td:nth-child(1){
+.tableuser .dataTables_wrapper th:nth-child(1), .tableuser .dataTables_wrapper tbody tr td:nth-child(1),
+.tableevent .dataTables_wrapper th:nth-child(1), .tableevent .dataTables_wrapper tbody tr td:nth-child(1)
+{
   display: none;
 }
 
