--- a/sgc_client/src/App.css
+++ b/sgc_client/src/App.css
@@ -55,3 +55,10 @@ label:focus,
     box-shadow: none !important;
 }
 
+
+.imagen{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
