--- a/sgc_client/src/App.css
+++ b/sgc_client/src/App.css
@@ -129,22 +129,20 @@ textarea:hover, input:hover, textarea:active, input:active, textarea:focus, inpu
 .dataTables_length>label>select:focus {
   outline: 0;
   border-bottom: 2px solid #70388b;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
 
-
-.nav-pills .nav-link.active,
-.show>.nav-1 .nav-2{
-    background: #9A5AB8 !important;
-    color: #ffffff !important
+.nav-pills .tabM.active, .show>.nav-1 .nav-2 {
+  background: transparent !important;
+  border-bottom: 3px solid #9A5AB8 !important;
+  /* color: #ffffff !important */
 }
 
-.nav-1 .nav-2{
-  color: #70388b !important
+.nav-1 .nav-2 {
+  color: #70388b !important;
+  background: transparent !important;
 }
-
-
 
 /* .dataTables_filter > label::before {
   content: "Buscar";
