--- a/sgc_client/src/index.css
+++ b/sgc_client/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ padding-top: 50px;
 }
 
 code {
@@ -49,7 +50,9 @@ code {
   background: 	#fafafa;
   box-shadow: 0px 0px 5px #632382;
   min-height: 750px;
+  padding-top: 70px;
 }
+
 
 #dropdownMenuButton {
   height: 33px;
